--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<p><em>{{ page.date }}</em></p>
+<p><em>{{ page.date | date: "%B %e, %Y" | downcase }}</em></p>
 
 {{ content }}
