--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,4 +4,6 @@ layout: default
 
 <p><em>{{ page.date | date: "%B %e, %Y" | downcase }}{% if page.author %} by {{ page.author | downcase }}{% endif %}</em></p>
 
+<h1>{{ page.title|downcase }}</h1>
+
 {{ content }}
